--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ aiohttp==3.11.11
 aiosignal==1.3.2
 alembic==1.14.0
 annotated-types==0.7.0
-anthropic==0.50.0
+anthropic==0.51.0
 anyio==4.9.0
 appdirs==1.4.4
 APScheduler==3.10.4
@@ -18,14 +18,14 @@ attrs==25.3.0
 Authlib==1.4.1
 av==14.3.0
 azure-ai-documentintelligence==1.0.0
-azure-core==1.33.0
+azure-core==1.34.0
 azure-identity==1.20.0
 azure-storage-blob==12.24.1
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bidict==0.23.1
-bitarray==3.3.1
+bitarray==3.4.0
 black==25.1.0
 blinker==1.9.0
 boto3==1.35.53
@@ -35,18 +35,18 @@ cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 chardet==5.2.0
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
 chroma-hnswlib==0.7.6
 chromadb==0.6.3
-click==8.1.8
+click==8.2.0
 colbert-ai==0.2.21
 colorclass==2.2.2
 coloredlogs==15.0.1
 compressed-rtf==1.0.7
-cryptography==44.0.2
+cryptography==44.0.3
 ctranslate2==4.6.0
 dataclasses-json==0.6.7
-datasets==3.5.1
+datasets==3.6.0
 defusedxml==0.7.1
 Deprecated==1.2.18
 dill==0.3.8
@@ -61,7 +61,7 @@ ebcdic==1.1.1
 ecdsa==0.19.1
 einops==0.8.1
 elastic-transport==8.17.1
-elasticsearch==8.17.1
+elasticsearch==9.0.1
 emoji==2.14.1
 et_xmlfile==2.0.0
 eval_type_backport==0.2.2
@@ -73,9 +73,9 @@ faster-whisper==1.1.1
 filelock==3.18.0
 filetype==1.2.0
 firecrawl-py==1.12.0
-Flask==3.1.0
+Flask==3.1.1
 flatbuffers==25.2.10
-fonttools==4.57.0
+fonttools==4.58.0
 fpdf2==2.8.2
 frozenlist==1.6.0
 fs==2.4.16
@@ -88,7 +88,7 @@ GitPython==3.1.44
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
 google-api-python-client==2.169.0
-google-auth==2.39.0
+google-auth==2.40.1
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 google-cloud-core==2.4.3
@@ -110,7 +110,7 @@ httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.30.2
+huggingface-hub==0.31.2
 humanfriendly==10.0
 hyperframe==6.1.0
 idna==3.10
@@ -122,20 +122,22 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
 jmespath==1.0.1
-joblib==1.4.2
+joblib==1.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 kubernetes==32.0.1
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.56
+langchain==0.3.24
+langchain-community==0.3.23
+langchain-core==0.3.59
 langchain-text-splitters==0.3.8
 langdetect==1.0.9
 langfuse==2.44.0
-langsmith==0.3.38
+langsmith==0.3.42
 lark==1.1.9
 ldap3==2.9.1
-loguru==0.7.2
+loguru==0.7.3
 lxml==5.4.0
 Mako==1.3.10
 Markdown==3.7
@@ -176,22 +178,22 @@ oauthlib==3.2.2
 olefile==0.47
 oletools==0.60.2
 onnxruntime==1.20.1
-open-webui==0.6.5
-openai==1.76.2
+open-webui==0.6.9
+openai==1.78.1
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 opensearch-py==2.8.0
-opentelemetry-api==1.32.1
-opentelemetry-exporter-otlp-proto-common==1.32.1
-opentelemetry-exporter-otlp-proto-grpc==1.32.1
-opentelemetry-instrumentation==0.53b1
-opentelemetry-instrumentation-asgi==0.53b1
-opentelemetry-instrumentation-fastapi==0.53b1
-opentelemetry-proto==1.32.1
-opentelemetry-sdk==1.32.1
-opentelemetry-semantic-conventions==0.53b1
-opentelemetry-util-http==0.53b1
+opentelemetry-api==1.33.0
+opentelemetry-exporter-otlp-proto-common==1.33.0
+opentelemetry-exporter-otlp-proto-grpc==1.33.0
+opentelemetry-instrumentation==0.54b0
+opentelemetry-instrumentation-asgi==0.54b0
+opentelemetry-instrumentation-fastapi==0.54b0
+opentelemetry-proto==1.33.0
+opentelemetry-sdk==1.33.0
+opentelemetry-semantic-conventions==0.54b0
+opentelemetry-util-http==0.54b0
 orjson==3.10.18
 overrides==7.7.0
 packaging==23.2
@@ -203,7 +205,9 @@ peewee==3.17.9
 peewee-migrate==1.12.2
 pgvector==0.4.0
 pillow==11.1.0
-platformdirs==4.3.7
+pinecone==6.0.2
+pinecone-plugin-interface==0.0.7
+platformdirs==4.3.8
 playwright==1.49.1
 pluggy==1.5.0
 portalocker==2.10.1
@@ -240,7 +244,7 @@ pytest==8.3.5
 pytest-docker==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-engineio==4.12.0
+python-engineio==4.12.1
 python-iso639==2025.2.18
 python-jose==3.4.0
 python-magic==0.4.27
@@ -255,9 +259,10 @@ PyYAML==6.0.2
 qdrant-client==1.12.2
 rank-bm25==0.2.2
 RapidFuzz==3.13.0
-rapidocr-onnxruntime==1.3.24
+rapidocr-onnxruntime==1.4.4
 red-black-tree-mod==1.22
-redis==5.2.1
+redis==6.1.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -265,13 +270,14 @@ requests-toolbelt==1.0.0
 responses==0.25.7
 RestrictedPython==8.0
 rich==14.0.0
+rpds-py==0.24.0
 rsa==4.9.1
-RTFDE==0.1.2
+RTFDE==0.1.2.1
 s3transfer==0.10.4
 safetensors==0.5.3
 scikit-learn==1.6.1
-scipy==1.15.2
-sentence-transformers==3.3.1
+scipy==1.15.3
+sentence-transformers==4.1.0
 sentencepiece==0.2.0
 shapely==2.1.0
 shellingham==1.5.4
