--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ async-timeout==5.0.1
 attrs==25.3.0
 Authlib==1.4.1
 av==14.3.0
-azure-ai-documentintelligence==1.0.0
+azure-ai-documentintelligence==1.0.2
 azure-core==1.34.0
 azure-identity==1.20.0
 azure-storage-blob==12.24.1
@@ -30,6 +30,7 @@ black==25.1.0
 blinker==1.9.0
 boto3==1.35.53
 botocore==1.35.99
+Brotli==1.1.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
@@ -47,6 +48,7 @@ cryptography==44.0.3
 ctranslate2==4.6.0
 dataclasses-json==0.6.7
 datasets==3.6.0
+ddgs==9.0.0
 defusedxml==0.7.1
 Deprecated==1.2.18
 dill==0.3.8
@@ -54,7 +56,7 @@ distro==1.9.0
 dnspython==2.7.0
 docker==7.1.0
 docx2txt==0.8
-duckduckgo_search==8.0.1
+duckduckgo_search==8.0.2
 durationpy==0.9
 easygui==0.98.3
 ebcdic==1.1.1
@@ -94,7 +96,8 @@ google-auth-oauthlib==1.2.2
 google-cloud-core==2.4.3
 google-cloud-storage==2.19.0
 google-crc32c==1.7.1
-google-generativeai==0.8.4
+google-genai==1.15.0
+google-generativeai==0.8.5
 google-resumable-media==2.7.2
 googleapis-common-protos==1.63.2
 greenlet==3.1.1
@@ -128,13 +131,13 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 kubernetes==32.0.1
-langchain==0.3.24
-langchain-community==0.3.23
-langchain-core==0.3.59
+langchain==0.3.26
+langchain-community==0.3.26
+langchain-core==0.3.69
 langchain-text-splitters==0.3.8
 langdetect==1.0.9
 langfuse==2.44.0
-langsmith==0.3.42
+langsmith==0.4.8
 lark==1.1.9
 ldap3==2.9.1
 loguru==0.7.3
@@ -178,7 +181,7 @@ oauthlib==3.2.2
 olefile==0.47
 oletools==0.60.2
 onnxruntime==1.20.1
-open-webui==0.6.9
+open-webui==0.6.18
 openai==1.78.1
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
@@ -201,17 +204,17 @@ pandas==2.2.3
 passlib==1.7.4
 pathspec==0.12.1
 pcodedmp==1.2.6
-peewee==3.17.9
+peewee==3.18.1
 peewee-migrate==1.12.2
 pgvector==0.4.0
-pillow==11.1.0
+pillow==11.2.1
 pinecone==6.0.2
 pinecone-plugin-interface==0.0.7
 platformdirs==4.3.8
 playwright==1.49.1
 pluggy==1.5.0
 portalocker==2.10.1
-posthog==4.0.1
+posthog==5.4.0
 primp==0.15.0
 propcache==0.3.1
 proto-plus==1.26.1
@@ -224,9 +227,10 @@ pyasn1==0.4.8
 pyasn1_modules==0.4.1
 pyclipper==1.3.0.post6
 pycparser==2.22
-pydantic==2.10.6
+pycrdt==0.12.25
+pydantic==2.11.7
 pydantic-settings==2.9.1
-pydantic_core==2.27.2
+pydantic_core==2.33.2
 pydub==0.25.1
 pyee==12.0.0
 Pygments==2.19.1
@@ -250,13 +254,13 @@ python-jose==3.4.0
 python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.2
-python-pptx==1.0.0
+python-pptx==1.0.2
 python-socketio==5.13.0
 pytube==15.0.0
 pytz==2025.2
 pyxlsb==1.0.10
 PyYAML==6.0.2
-qdrant-client==1.12.2
+qdrant-client==1.14.3
 rank-bm25==0.2.2
 RapidFuzz==3.13.0
 rapidocr-onnxruntime==1.4.4
@@ -264,12 +268,12 @@ red-black-tree-mod==1.22
 redis==6.1.0
 referencing==0.36.2
 regex==2024.11.6
-requests==2.32.3
+requests==2.32.4
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 responses==0.25.7
 RestrictedPython==8.0
-rich==14.0.0
+rich==13.9.4
 rpds-py==0.24.0
 rsa==4.9.1
 RTFDE==0.1.2.1
@@ -285,10 +289,12 @@ simple-websocket==1.1.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+socksio==1.0.0
 soundfile==0.13.1
 soupsieve==2.7
 SQLAlchemy==2.0.38
 starlette==0.45.3
+starlette-compress==1.6.0
 sympy==1.14.0
 tenacity==9.1.2
 tencentcloud-sdk-python==3.0.1336
@@ -310,9 +316,9 @@ unstructured==0.16.17
 unstructured-client==0.32.3
 uritemplate==4.1.1
 urllib3==2.4.0
-uvicorn==0.34.0
+uvicorn==0.34.2
 uvloop==0.21.0
-validators==0.34.0
+validators==0.35.0
 watchfiles==1.0.5
 wcwidth==0.2.13
 webencodings==0.5.1
@@ -326,6 +332,6 @@ XlsxWriter==3.2.3
 xmltodict==0.14.2
 xxhash==3.5.0
 yarl==1.20.0
-youtube-transcript-api==1.0.3
+youtube-transcript-api==1.1.0
 zipp==3.21.0
 zstandard==0.23.0
