--- a/requirements.txt
+++ b/requirements.txt
@@ -1,164 +1,138 @@
-accelerate==1.10.0
+accelerate==1.12.0
 aiocache==0.12.3
-aiofiles==24.1.0
+aiofiles==25.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
 alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
-anthropic==0.64.0
-anyio==4.10.0
-appdirs==1.4.4
-APScheduler==3.11.2
+anthropic==0.77.1
+anyio==4.12.1
+apscheduler==3.11.2
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 asgiref==3.11.0
 async-timeout==5.0.1
-attrs==25.3.0
-Authlib==1.6.6
-av==15.0.0
+attrs==25.4.0
+authlib==1.6.6
+av==16.1.0
 azure-ai-documentintelligence==1.0.2
-azure-core==1.35.0
+azure-core==1.38.0
 azure-identity==1.25.1
 azure-storage-blob==12.27.1
 backoff==2.2.1
 bcrypt==5.0.0
-beautifulsoup4==4.13.4
+beautifulsoup4==4.14.3
 bidict==0.23.1
-bitarray==3.6.1
 black==25.12.0
-blinker==1.9.0
 boto3==1.42.21
-botocore==1.42.32
-Brotli==1.1.0
-build==1.3.0
-cachetools==5.5.2
-certifi==2025.8.3
-cffi==1.17.1
+botocore==1.42.41
+brotli==1.2.0
+build==1.4.0
+certifi==2026.1.4
+cffi==2.0.0
 chardet==5.2.0
-charset-normalizer==3.4.3
-chroma-hnswlib==0.7.6
+charset-normalizer==3.4.4
 chromadb==1.4.0
-click==8.2.1
-colbert-ai==0.2.21
+click==8.3.1
 coloredlogs==15.0.1
-cryptography==45.0.6
-ctranslate2==4.6.0
+cryptography==46.0.4
+ctranslate2==4.7.0
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.3
 dataclasses-json==0.6.7
-datasets==4.0.0
 ddgs==9.10.0
 defusedxml==0.7.1
-dill==0.3.8
 distro==1.9.0
-dnspython==2.7.0
-docker==7.1.0
+docstring-parser==0.17.0
 docx2txt==0.9
 durationpy==0.10
 ecdsa==0.19.1
 einops==0.8.1
-elastic-transport==8.17.1
-elasticsearch==9.0.1
-emoji==2.14.1
-et_xmlfile==2.0.0
-Events==0.5
+emoji==2.15.0
+et-xmlfile==2.0.0
+events==0.5
 fake-useragent==2.2.0
 fastapi==0.128.0
 faster-whisper==1.2.1
-filelock==3.19.1
+filelock==3.20.3
 filetype==1.2.0
-firecrawl-py==1.12.0
-Flask==3.1.1
-flatbuffers==25.2.10
-fonttools==4.59.1
+flatbuffers==25.12.19
+fonttools==4.61.1
 fpdf2==2.8.5
-frozenlist==1.7.0
-fs==2.4.16
-fsspec==2025.3.0
+frozenlist==1.8.0
+fsspec==2026.1.0
 ftfy==6.3.1
-gcp-storage-emulator==2024.8.3
-git-python==1.0.3
-gitdb==4.0.12
-GitPython==3.1.45
-google-ai-generativelanguage==0.6.15
 google-api-core==2.29.0
-google-api-python-client==2.179.0
-google-auth==2.47.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-google-cloud-core==2.4.3
+google-api-python-client==2.189.0
+google-auth==2.48.0
+google-auth-httplib2==0.3.0
+google-auth-oauthlib==1.2.4
+google-cloud-core==2.5.0
 google-cloud-storage==3.7.0
-google-crc32c==1.7.1
+google-crc32c==1.8.0
 google-genai==1.56.0
-google-generativeai==0.8.5
-google-resumable-media==2.7.2
+google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
-greenlet==3.1.1
+greenlet==3.3.1
 grpcio==1.76.0
-grpcio-status==1.67.1
 h11==0.16.0
-h2==4.2.0
-hf-xet==1.1.7
+h2==4.3.0
+hf-xet==1.2.0
 hpack==4.1.0
 html5lib==1.1
 httpcore==1.0.9
-httplib2==0.22.0
-httptools==0.6.4
+httplib2==0.31.2
+httptools==0.7.1
 httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.34.4
+httpx-sse==0.4.3
+huggingface-hub==0.36.1
 humanfriendly==10.0
 hyperframe==6.1.0
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-iniconfig==2.1.0
+idna==3.11
+importlib-metadata==8.7.1
+importlib-resources==6.5.2
 isodate==0.7.2
 itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.10.0
-jmespath==1.0.1
-joblib==1.5.1
+jinja2==3.1.6
+jiter==0.13.0
+jmespath==1.1.0
+joblib==1.5.3
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.25.1
+jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
-kubernetes==33.1.0
+kubernetes==35.0.0
 langchain==1.2.0
 langchain-classic==1.0.1
 langchain-community==0.4.1
-langchain-core==1.2.7
+langchain-core==1.2.8
 langchain-text-splitters==1.1.0
 langdetect==1.0.9
-langfuse==2.44.0
-langgraph==1.0.6
+langgraph==1.0.7
 langgraph-checkpoint==4.0.0
-langgraph-prebuilt==1.0.6
+langgraph-prebuilt==1.0.7
 langgraph-sdk==0.3.3
-langsmith==0.4.14
+langsmith==0.6.8
 ldap3==2.9.1
 loguru==0.7.3
-lxml==6.0.0
-Mako==1.3.10
-Markdown==3.10
+lxml==6.0.2
+mako==1.3.10
+markdown==3.10
 markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
+markupsafe==3.0.3
+marshmallow==3.26.2
 mcp==1.25.0
 mdurl==0.1.2
-milvus-lite==2.5.1
 mmh3==5.2.0
-moto==5.1.10
 mpmath==1.3.0
-msal==1.33.0
+msal==1.34.0
 msal-extensions==1.3.1
 msoffcrypto-tool==5.4.2
-multidict==6.6.4
-multiprocess==0.70.16
-mypy_extensions==1.1.0
-nest-asyncio==1.6.0
-networkx==3.5
-ninja==1.13.0
+multidict==6.7.1
+mypy-extensions==1.1.0
+networkx==3.6.1
 nltk==3.9.2
 numpy==2.2.6
 nvidia-cublas-cu12==12.8.4.1
@@ -172,84 +146,67 @@ nvidia-curand-cu12==10.3.9.90
 nvidia-cusolver-cu12==11.7.3.90
 nvidia-cusparse-cu12==12.5.8.93
 nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
+nvidia-nccl-cu12==2.27.5
 nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
 nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 olefile==0.47
 onnxruntime==1.23.2
 open-webui==0.7.2
-openai==1.99.9
-opencv-python==4.11.0.86
+openai==2.16.0
+opencv-python==4.13.0.90
 opencv-python-headless==4.12.0.88
 openpyxl==3.1.5
 opensearch-protobufs==0.19.0
 opensearch-py==3.1.0
-opentelemetry-api==1.36.0
-opentelemetry-exporter-otlp-proto-common==1.36.0
-opentelemetry-exporter-otlp-proto-grpc==1.36.0
-opentelemetry-instrumentation==0.57b0
-opentelemetry-instrumentation-asgi==0.57b0
-opentelemetry-instrumentation-fastapi==0.57b0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
-opentelemetry-util-http==0.57b0
-oracledb==3.2.0
-orjson==3.11.2
+opentelemetry-api==1.39.1
+opentelemetry-exporter-otlp-proto-common==1.39.1
+opentelemetry-exporter-otlp-proto-grpc==1.39.1
+opentelemetry-proto==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
+orjson==3.11.7
 ormsgpack==1.12.2
 overrides==7.7.0
-packaging==23.2
+packaging==26.0
 pandas==2.3.3
-passlib==1.7.4
-pathspec==0.12.1
+pathspec==1.0.4
 peewee==3.18.3
 peewee-migrate==1.14.3
-pgvector==0.4.0
 pillow==12.1.0
-pinecone==6.0.2
-pinecone-plugin-interface==0.0.7
-platformdirs==4.3.8
-playwright==1.49.1
-pluggy==1.6.0
-portalocker==2.10.1
+platformdirs==4.5.1
 posthog==5.4.0
 primp==0.15.0
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.0.0
-psycopg2-binary==2.9.9
-py-partiql-parser==0.6.1
+propcache==0.4.1
+proto-plus==1.27.1
+protobuf==6.33.5
+psutil==7.2.2
 pyarrow==20.0.0
 pyasn1==0.6.2
-pyasn1_modules==0.4.1
-pybase64==1.4.2
-pyclipper==1.3.0.post6
-pycparser==2.22
+pyasn1-modules==0.4.2
+pybase64==1.4.3
+pyclipper==1.4.0
+pycparser==3.0
 pycrdt==0.12.44
 pydantic==2.12.5
-pydantic-settings==2.10.1
-pydantic_core==2.41.5
+pydantic-core==2.41.5
+pydantic-settings==2.12.0
 pydub==0.25.1
-pyee==12.0.0
-Pygments==2.19.2
-PyJWT==2.10.1
+pygments==2.19.2
+pyjwt==2.10.1
 pymdown-extensions==10.20
-pymilvus==2.5.0
-pymongo==4.14.0
-PyMySQL==1.1.2
+pymysql==1.1.2
 pypandoc==1.16.2
-pyparsing==3.2.3
+pyparsing==3.3.2
 pypdf==6.5.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pytest==8.3.5
-pytest-docker==3.1.2
+pypdfium2==5.3.0
+pypika==0.51.0
+pyproject-hooks==1.2.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-engineio==4.12.2
-python-iso639==2025.2.18
+python-dotenv==1.2.1
+python-engineio==4.13.0
+python-iso639==2026.1.31
 python-jose==3.5.0
 python-magic==0.4.27
 python-mimeparse==2.0.0
@@ -257,84 +214,78 @@ python-multipart==0.0.21
 python-oxmsg==0.0.2
 python-pptx==1.0.2
 python-socketio==5.16.0
-pytokens==0.4.0
+pytokens==0.4.1
 pytube==15.0.0
 pytz==2025.2
 pyxlsb==1.0.10
-PyYAML==6.0.2
-qdrant-client==1.14.3
+pyyaml==6.0.3
 rank-bm25==0.2.2
-RapidFuzz==3.13.0
+rapidfuzz==3.14.3
 rapidocr-onnxruntime==1.4.4
-redis==6.4.0
-referencing==0.36.2
-regex==2025.7.34
+redis==7.1.0
+referencing==0.37.0
+regex==2026.1.15
 requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-responses==0.25.8
-RestrictedPython==8.1
+restrictedpython==8.1
 rich==13.9.4
-rpds-py==0.27.1
+rpds-py==0.30.0
 rsa==4.9.1
 s3transfer==0.16.0
-safetensors==0.6.2
-scikit-learn==1.7.1
-scipy==1.16.1
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
 sentence-transformers==5.2.0
 sentencepiece==0.2.1
-shapely==2.1.1
+setuptools==80.10.2
+shapely==2.1.2
 shellingham==1.5.4
 simple-websocket==1.1.0
 six==1.17.0
-smmap==5.0.2
 sniffio==1.3.1
 socksio==1.0.0
 soundfile==0.13.1
-soupsieve==2.7
-SQLAlchemy==2.0.45
-sse-starlette==3.0.2
-starlette==0.45.3
+soupsieve==2.8.3
+sqlalchemy==2.0.45
+sse-starlette==3.2.0
+starlette==0.50.0
 starlette-compress==1.6.1
 starsessions==2.2.1
 sympy==1.14.0
-tenacity==8.5.0
-tencentcloud-sdk-python==3.0.1336
+tenacity==9.1.2
 threadpoolctl==3.6.0
-tiktoken==0.11.0
+tiktoken==0.12.0
 tokenizers==0.22.2
-torch==2.8.0
-tqdm==4.67.1
+torch==2.10.0
+tqdm==4.67.3
 transformers==4.57.3
-triton==3.4.0
-typer==0.16.0
+triton==3.6.0
+typer==0.21.1
+typing-extensions==4.15.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
-typing_extensions==4.14.1
-tzdata==2025.2
+tzdata==2025.3
 tzlocal==5.3.1
-ujson==5.10.0
 unstructured==0.18.24
-unstructured-client==0.42.3
+unstructured-client==0.42.10
 uritemplate==4.2.0
-urllib3==2.5.0
-uuid_utils==0.14.0
+urllib3==2.6.3
+uuid-utils==0.14.0
 uvicorn==0.40.0
-uvloop==0.21.0
+uvloop==0.22.1
 validators==0.35.0
-watchfiles==1.1.0
-wcwidth==0.2.13
+watchfiles==1.1.1
+wcwidth==0.5.3
 webencodings==0.5.1
-websocket-client==1.8.0
+websocket-client==1.9.0
 websockets==15.0.1
-Werkzeug==3.1.3
-wrapt==1.17.3
-wsproto==1.2.0
+wrapt==2.1.1
+wsproto==1.3.2
 xlrd==2.0.2
-xlsxwriter==3.2.5
-xmltodict==0.14.2
-xxhash==3.5.0
-yarl==1.20.1
+xlsxwriter==3.2.9
+xxhash==3.6.0
+yarl==1.22.0
 youtube-transcript-api==1.2.3
 zipp==3.23.0
-zstandard==0.23.0
+zstandard==0.25.0
