--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,10 @@ anyio==4.12.1
 apscheduler==3.11.2
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
+arrow==1.4.0
 asgiref==3.11.0
+asttokens==3.0.1
+async-lru==2.1.0
 async-timeout==5.0.1
 attrs==25.4.0
 authlib==1.6.6
@@ -21,11 +24,13 @@ azure-ai-documentintelligence==1.0.2
 azure-core==1.38.0
 azure-identity==1.25.1
 azure-storage-blob==12.27.1
+babel==2.18.0
 backoff==2.2.1
 bcrypt==5.0.0
 beautifulsoup4==4.14.3
 bidict==0.23.1
 black==25.12.0
+bleach==6.3.0
 boto3==1.42.21
 botocore==1.42.41
 brotli==1.2.0
@@ -37,12 +42,15 @@ charset-normalizer==3.4.4
 chromadb==1.4.0
 click==8.3.1
 coloredlogs==15.0.1
+comm==0.2.3
 cryptography==46.0.4
 ctranslate2==4.7.0
 cuda-bindings==12.9.4
 cuda-pathfinder==1.3.3
 dataclasses-json==0.6.7
 ddgs==9.10.0
+debugpy==1.8.20
+decorator==5.2.1
 defusedxml==0.7.1
 distro==1.9.0
 docstring-parser==0.17.0
@@ -53,14 +61,17 @@ einops==0.8.1
 emoji==2.15.0
 et-xmlfile==2.0.0
 events==0.5
+executing==2.2.1
 fake-useragent==2.2.0
 fastapi==0.128.0
 faster-whisper==1.2.1
+fastjsonschema==2.21.2
 filelock==3.20.3
 filetype==1.2.0
 flatbuffers==25.12.19
 fonttools==4.61.1
 fpdf2==2.8.5
+fqdn==1.5.1
 frozenlist==1.8.0
 fsspec==2026.1.0
 ftfy==6.3.1
@@ -93,16 +104,31 @@ hyperframe==6.1.0
 idna==3.11
 importlib-metadata==8.7.1
 importlib-resources==6.5.2
+ipykernel==7.1.0
+ipython==9.10.0
+ipython-pygments-lexers==1.1.1
 isodate==0.7.2
+isoduration==20.11.0
 itsdangerous==2.2.0
+jedi==0.19.2
 jinja2==3.1.6
 jiter==0.13.0
 jmespath==1.1.0
 joblib==1.5.3
+json5==0.13.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
+jupyter-client==8.8.0
+jupyter-core==5.9.1
+jupyter-events==0.12.0
+jupyter-lsp==2.3.0
+jupyter-server==2.17.0
+jupyter-server-terminals==0.5.4
+jupyterlab==4.5.3
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.28.0
 kubernetes==35.0.0
 langchain==1.2.0
 langchain-classic==1.0.1
@@ -115,6 +141,7 @@ langgraph-checkpoint==4.0.0
 langgraph-prebuilt==1.0.7
 langgraph-sdk==0.3.3
 langsmith==0.6.8
+lark==1.3.1
 ldap3==2.9.1
 loguru==0.7.3
 lxml==6.0.2
@@ -123,8 +150,10 @@ markdown==3.10
 markdown-it-py==4.0.0
 markupsafe==3.0.3
 marshmallow==3.26.2
+matplotlib-inline==0.2.1
 mcp==1.25.0
 mdurl==0.1.2
+mistune==3.2.0
 mmh3==5.2.0
 mpmath==1.3.0
 msal==1.34.0
@@ -132,8 +161,13 @@ msal-extensions==1.3.1
 msoffcrypto-tool==5.4.2
 multidict==6.7.1
 mypy-extensions==1.1.0
+nbclient==0.10.4
+nbconvert==7.17.0
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.6.1
 nltk==3.9.2
+notebook-shim==0.2.4
 numpy==2.2.6
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
@@ -171,17 +205,24 @@ ormsgpack==1.12.2
 overrides==7.7.0
 packaging==26.0
 pandas==2.3.3
+pandocfilters==1.5.1
+parso==0.8.5
 pathspec==1.0.4
 peewee==3.18.3
 peewee-migrate==1.14.3
+pexpect==4.9.0
 pillow==12.1.0
 platformdirs==4.5.1
 posthog==5.4.0
 primp==0.15.0
+prometheus-client==0.24.1
+prompt-toolkit==3.0.52
 propcache==0.4.1
 proto-plus==1.27.1
 protobuf==6.33.5
 psutil==7.2.2
+ptyprocess==0.7.0
+pure-eval==0.2.3
 pyarrow==20.0.0
 pyasn1==0.6.2
 pyasn1-modules==0.4.2
@@ -208,6 +249,7 @@ python-dotenv==1.2.1
 python-engineio==4.13.0
 python-iso639==2026.1.31
 python-jose==3.5.0
+python-json-logger==4.0.0
 python-magic==0.4.27
 python-mimeparse==2.0.0
 python-multipart==0.0.21
@@ -219,6 +261,7 @@ pytube==15.0.0
 pytz==2025.2
 pyxlsb==1.0.10
 pyyaml==6.0.3
+pyzmq==27.1.0
 rank-bm25==0.2.2
 rapidfuzz==3.14.3
 rapidocr-onnxruntime==1.4.4
@@ -229,6 +272,9 @@ requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 restrictedpython==8.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
 rich==13.9.4
 rpds-py==0.30.0
 rsa==4.9.1
@@ -236,6 +282,7 @@ s3transfer==0.16.0
 safetensors==0.7.0
 scikit-learn==1.8.0
 scipy==1.17.0
+send2trash==2.1.0
 sentence-transformers==5.2.0
 sentencepiece==0.2.1
 setuptools==80.10.2
@@ -249,16 +296,21 @@ soundfile==0.13.1
 soupsieve==2.8.3
 sqlalchemy==2.0.45
 sse-starlette==3.2.0
+stack-data==0.6.3
 starlette==0.50.0
 starlette-compress==1.6.1
 starsessions==2.2.1
 sympy==1.14.0
 tenacity==9.1.2
+terminado==0.18.1
 threadpoolctl==3.6.0
 tiktoken==0.12.0
+tinycss2==1.4.0
 tokenizers==0.22.2
 torch==2.10.0
+tornado==6.5.4
 tqdm==4.67.3
+traitlets==5.14.3
 transformers==4.57.3
 triton==3.6.0
 typer==0.21.1
@@ -269,6 +321,7 @@ tzdata==2025.3
 tzlocal==5.3.1
 unstructured==0.18.24
 unstructured-client==0.42.10
+uri-template==1.3.0
 uritemplate==4.2.0
 urllib3==2.6.3
 uuid-utils==0.14.0
@@ -277,6 +330,7 @@ uvloop==0.22.1
 validators==0.35.0
 watchfiles==1.1.1
 wcwidth==0.5.3
+webcolors==25.10.0
 webencodings==0.5.1
 websocket-client==1.9.0
 websockets==15.0.1
