--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ aiosignal==1.4.0
 alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
-anthropic==0.77.1
+anthropic==0.78.0
 anyio==4.12.1
 apscheduler==3.11.2
 argon2-cffi==25.1.0
@@ -32,7 +32,7 @@ bidict==0.23.1
 black==25.12.0
 bleach==6.3.0
 boto3==1.42.21
-botocore==1.42.41
+botocore==1.42.43
 brotli==1.2.0
 build==1.4.0
 certifi==2026.1.4
@@ -44,7 +44,7 @@ click==8.3.1
 coloredlogs==15.0.1
 comm==0.2.3
 cryptography==46.0.4
-ctranslate2==4.7.0
+ctranslate2==4.7.1
 cuda-bindings==12.9.4
 cuda-pathfinder==1.3.3
 dataclasses-json==0.6.7
@@ -52,6 +52,7 @@ ddgs==9.10.0
 debugpy==1.8.20
 decorator==5.2.1
 defusedxml==0.7.1
+diskcache==5.6.3
 distro==1.9.0
 docstring-parser==0.17.0
 docx2txt==0.9
@@ -75,6 +76,7 @@ fqdn==1.5.1
 frozenlist==1.8.0
 fsspec==2026.1.0
 ftfy==6.3.1
+gguf==0.17.1
 google-api-core==2.29.0
 google-api-python-client==2.189.0
 google-auth==2.48.0
@@ -133,16 +135,18 @@ kubernetes==35.0.0
 langchain==1.2.0
 langchain-classic==1.0.1
 langchain-community==0.4.1
-langchain-core==1.2.8
+langchain-core==1.2.9
 langchain-text-splitters==1.1.0
 langdetect==1.0.9
 langgraph==1.0.7
 langgraph-checkpoint==4.0.0
 langgraph-prebuilt==1.0.7
 langgraph-sdk==0.3.3
-langsmith==0.6.8
+langsmith==0.6.9
 lark==1.3.1
 ldap3==2.9.1
+line-profiler==5.0.0
+llama-cpp-python==0.3.16
 loguru==0.7.3
 lxml==6.0.2
 mako==1.3.10
@@ -186,10 +190,11 @@ nvidia-nvshmem-cu12==3.4.5
 nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 olefile==0.47
+ollama==0.6.1
 onnxruntime==1.23.2
 open-webui==0.7.2
-openai==2.16.0
-opencv-python==4.13.0.90
+openai==2.17.0
+opencv-python==4.13.0.92
 opencv-python-headless==4.12.0.88
 openpyxl==3.1.5
 opensearch-protobufs==0.19.0
@@ -242,7 +247,7 @@ pypandoc==1.16.2
 pyparsing==3.3.2
 pypdf==6.5.0
 pypdfium2==5.3.0
-pypika==0.51.0
+pypika==0.51.1
 pyproject-hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -301,7 +306,7 @@ starlette==0.50.0
 starlette-compress==1.6.1
 starsessions==2.2.1
 sympy==1.14.0
-tenacity==9.1.2
+tenacity==9.1.3
 terminado==0.18.1
 threadpoolctl==3.6.0
 tiktoken==0.12.0
